# ctest19

./: core.html  core.html.md  index.html  index.html.md  pyproject.toml  robots.txt  search.json  sitemap.xml
ctest19/: _modidx.py  core.py
nbs/: 00_core.ipynb  _quarto.yml  index.ipynb  nbdev.yml
site_libs/bootstrap/: bootstrap-5d19a460f1f91a90ab1155c03e7b76a2.min.css
